Fix overflow friends request, fix about page link opening new tab, fix dont stop rules styling

--- a/frontend/src/stylesheets/profile/profile.scss
+++ b/frontend/src/stylesheets/profile/profile.scss
@@ -303,10 +303,12 @@
 
 .friends-list {
     box-sizing: border-box;
+    min-width: 455px;
     padding: 1rem 2rem;
     height: 100%;
     box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.5);
     background-color: $tan;
+    overflow-y: scroll;
 }
 
 .friends-flex-container {
@@ -317,6 +319,7 @@
 }
 
 .userCard-container {
+    position: relative;
     font-family: 'Really-Free';
     width: 250px;
     height: 60px;
@@ -355,6 +358,8 @@
 }
 
 .friendship-status {
+    position: absolute;
+    right: 10px;
     font-size: 22px;
     border-radius: .2rem;
     padding: .2rem;
